kubernetes/apps/default/inbi-demo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbi-demo-launcher
  labels:
    app.kubernetes.io/name: inbi-demo-launcher
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - inbi-demo.iacobapp.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /api/health
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /health
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: inbi-demo-launcher
          port: 4200
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbi-demo-office
  labels:
    app.kubernetes.io/name: inbi-demo-office
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - inbi-demo-office.iacobapp.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /api/health
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /health
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: inbi-demo-office
          port: 3300
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbi-demo-tablet
  labels:
    app.kubernetes.io/name: inbi-demo-tablet
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - inbi-demo-tablet.iacobapp.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /api/health
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /health
      backendRefs:
        - name: inbi-demo-api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: inbi-demo-tablet
          port: 8080
